# belajar_rust

./: README.md
common_concepts/: Cargo.toml
common_concepts/src/: main.rs
giessing_game/: Cargo.toml
giessing_game/src/: main.rs
myads-external-thridparty/: .env  Cargo.toml
myads-external-thridparty/src/: main.rs
myads-external-thridparty/src/config/: db_conf.rs  mod.rs  redis_conf.rs
myads-external-thridparty/src/constant/: api_constant.rs  app_settings.rs  mod.rs
myads-external-thridparty/src/routes/: mod.rs  start_server.rs
ownership/src/: main.rs
ownership_1/src/: main.rs
pelajaran_1/: Cargo.toml
simple-api-rust/: Cargo.toml
simple-api-rust/src/: main.rs  routes.rs
simple-api-rust/src/routes/: handler.rs  model.rs  response.rs
simple-rocket-rust/: Cargo.toml
simple-rocket-rust/src/: main.rs  routes.rs
simple-rocket-rust/src/routes/: handler.rs  response.rs
struct_rust/src/: main.rs
struct_rust1/: Cargo.toml
struct_rust1/src/: main.rs
webserver/: index.html
webserver/src/: main.rs
